# simplejack

./: .gitignore  LICENSE  README.md  app.py
base/: campaign.py  webserver.py
campaign/exe/: __init__.py  config.json  main.py
campaign/exfil/: __init__.py  config.json  main.py
campaign/logging/: __init__.py  config.json  main.py
campaign/memory/: config.json  main.py
campaign/memory/data/CVE-2024-9680/: index.html  info.json
campaign/memory/data/CVE-2026-0001/: info.json
campaign/memory/exploits/CVE-2024-9680/: info.json
campaign/memory/exploits/CVE-2026-0001/: index.html  info.json
campaign/phishing/: __init__.py  config.json  main.py
campaign/phishing/data/: index.html  script.js  styles.css
campaign/qr/: __init__.py  config.json  main.py
campaign/xss/: __init__.py  config.json  main.py
campaign/xss/data/: script.js
lib/: campaign.py  config.py  helper.py  ua.py
src/exe_pingback/: CMakeLists.txt  build.sh  config.h.in  main.cpp
