cmake_minimum_required(VERSION 3.0.0)
project(EXEPINGBACK VERSION 0.1.0)
set(CMAKE_CXX_STANDARD 11)
set(VCPKG_HOME "$ENV{VCPKG_HOME}")
file(GLOB FILES ${PROJECT_SOURCE_DIR}/*.cpp)
find_package(CURL REQUIRED)
add_executable(${PROJECT_NAME} ${FILES})
set(URL "default-value" CACHE STRING "127.0.0.1")
configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.h.in ${CMAKE_CURRENT_BINARY_DIR}/config.h @ONLY)
target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
target_link_libraries(${PROJECT_NAME} PRIVATE ${CURL_LIBRARIES})
